<resources>
    <string name="app_name">Kotlin Fun</string>
    <string name="app_name_debug">Kotlin Fun Debug</string>
    <string name="meal_list">Meal Prep List</string>
    <string name="add_meal">Add Meal Prep</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="first_ingredient">First Ingredient</string>
    <string name="second_ingredient">Second Ingredient</string>
    <string name="third_ingredient">Third Ingredient</string>
    <string name="fourth_ingredient">Fourth Ingredient</string>
    <string name="save">Save New Meal</string>
    <string name="failed_fetch">Failed to Fetch Data</string>
    <string name="offline">You\'re offline!</string>

</resources>
