<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_meal"
            android:textSize="24sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_ingredient_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/first_ingredient"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_ingredient_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/second_ingredient"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_ingredient_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/third_ingredient"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_ingredient_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/fourth_ingredient"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_item_red"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>